fixed background images on mobile

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -68,40 +68,44 @@ img[src='./images/profile.jpg'] {
 	max-width: 500px;
 }
 .home-background {
-	background-image: url('../images/home-background.jpg');
-	background-size: cover;
-	-webkit-background-size: scroll;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-	background-attachment: fixed;
-	background-position: center top;
+	position: fixed;
+ 	width: 100%;
+ 	height: 100%;
+ 	background-size: cover;
+ 	background-position:center top;
+ 	top: 0; right: 0;
+ 	z-index: -1000;
+ 	background-image: url('../images/home-background.jpg');
 }
 .about-background {
-	background-image: url('../images/about-background.jpg');
+	position: fixed;
+	width: 100%;
+	height: 100%;
 	background-size: cover;
-	-webkit-background-size: scroll;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-attachment: fixed;
-	background-position: center top;
+	background-position:center top;
+	top: 0; right: 0;
+	z-index: -1000;
+	background-image: url('../images/about-background.jpg');
 }
 .writing-background {
 	background-image: url('../images/writing-background.jpg');
+	position: fixed;
+	width: 100%;
+	height: 100%;
 	background-size: cover;
-	-webkit-background-size: scroll;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-attachment: fixed;
-	background-position: center top;
+	background-position:center top;
+	top: 0; right: 0;
+	z-index: -1000;
 }
 .testimonials-background {
 	background-image: url('../images/testimonials-background.jpg');
+	position: fixed;
+	width: 100%;
+	height: 100%;
 	background-size: cover;
-	-webkit-background-size: scroll;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-attachment: fixed;
-	background-position: left top;
+	background-position:center top;
+	top: 0; right: 0;
+	z-index: -1000;
 }
 .hidden {
 	position: relative;
@@ -588,18 +592,6 @@ img[src='./images/dna-icon-small.png'] {
 	}
 	.nav-container input:checked ~ .nav-item {
 		left: 0px;
-	}
-	.home-background {
-		background-attachment: scroll;
-	}
-	.about-background {
-		background-attachment: scroll;
-	}
-	.writing-background {
-		background-attachment: scroll;
-	}
-	.testimonials-background {
-		background-attachment: scroll;
 	}
 }
 /* CSS coded by Ben Ayer */
